functions almost done

--- a/app/deploy/data/lyrics/1/lyric.html
+++ b/app/deploy/data/lyrics/1/lyric.html
@@ -1,7 +1,7 @@
 
 <p class="lyrics"> <!-- 가사 영역 -->
 <br/>
-<a href="#" data-track_id="0" class="lyrics_link">
+<a href="#" data-lyric_id="0" class="lyrics_link">
    <i></i>Le Poison<br/>
    <i></i>Le vin sait revêtir le plus sordide bouge<br/>
    <i></i>D'un luxe miraculeux<br/>
@@ -36,7 +36,7 @@
 
 <span class="partition"></span><br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="1" class="lyrics_link">
    <i></i>Intro)<br/>
    <i></i>Welcome to 'On the Road' Mixtape volume 2: Highdigger<br/>
    <i></i>Changstarr on the mic<br/>
@@ -47,18 +47,18 @@
 
 <i></i>Hook)<br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="2" class="lyrics_link">
    <i></i>I wonder what the meaning of life is<br/>
 </a>
 <i></i>내 머리 속은 온갖 욕망들로 꽉 차있지<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="3" class="lyrics_link">
    <i></i>I’m such a sucker for vices<br/>
 </a>
-<i></i>원한다면 꼭 이루고 말지 <a href="#" class="lyrics_link">So I don’t need your advices</a><br/>
+<i></i>원한다면 꼭 이루고 말지 <a href="#" data-lyric_id="4" class="lyrics_link">So I don’t need your advices</a><br/>
 
 <span class="partition"></span><br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="5" class="lyrics_link">
    <i></i>Les Fleurs du Mal (oui oui), Les Fleurs du Mal<br/>
    <i></i>Les Fleurs du Mal (oui oui), Les Fleurs du Mal<br/>
 </a>
@@ -73,16 +73,16 @@
 
 <span class="partition"></span><br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="6" class="lyrics_link">
    <i></i>Uggh, guess I had sex last night<br/>
    <i></i>내 옆에 곤히 잠든 아름다운 나체 하나를 보니<br/>
 </a>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="7" class="lyrics_link">
    <i></i>My homie Johnny be feelin' horny like Bologna sausage<br/>
 </a>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="8" class="lyrics_link">
    <i></i>Girl, why don’t we have morning sex….?<br/>
    <i></i>그녀의 옆에 앉아, 내 혀로 왼쪽 귓바퀴를 핥자<br/>
    <i></i>She be moaning<br/>
@@ -97,15 +97,15 @@
 <span class="partition"></span><br/>
 
 <i></i>Hook)<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="2" class="lyrics_link">
    <i></i>I wonder what the meaning of life is<br/>
 </a>
 
 <i></i>내 머리 속은 온갖 욕망들로 꽉 차있지<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="3" class="lyrics_link">
     <i></i>I’m such a sucker for vices<br/>
 </a>
-<i></i>원한다면 꼭 이루고 말지 <a href="#" class="lyrics_link">So I don’t need your advices</a><br/>
+<i></i>원한다면 꼭 이루고 말지 <a href="#" data-lyric_id="4" class="lyrics_link">So I don’t need your advices</a><br/>
 
 <a href="#" class="lyrics_link">
    <i></i>Les Fleurs du Mal (oui oui), Les Fleurs du Mal<br/>
