--- a/app/deploy/data/lyrics/2/lyric.html
+++ b/app/deploy/data/lyrics/2/lyric.html
@@ -1,13 +1,13 @@
 
 <p class="lyrics"> <!-- 가사 영역 -->
 <i></i>Hook&#41;<br/>
-<a href="#" data-track_id="0" class="lyrics_link">
+<a href="#" data-lyric_id="0" class="lyrics_link">
     <i></i>I like it, Jazz!<br/>
     <i></i>I like it, "Beat!"<br/>
     <i></i>I like it, Hip!<br/>
     <i></i>I like being awake<br/>
 </a>
-<a href="#" data-track_id="1" class="lyrics_link">
+<a href="#" data-lyric_id="1" class="lyrics_link">
     <i></i>쉴틈없이 소통을 해대는 나의 neurons<br/>
     <i></i>I feel like I could keep this goin' for eons<br/>
 </a>
@@ -25,10 +25,10 @@
 
 <i></i>Verse 1&#41;<br/>
 <i></i>난 하루중에 새벽에 제일 깨어있어<br/>
-<a href="#" data-track_id="2" class="lyrics_link">
+<a href="#" data-lyric_id="2" class="lyrics_link">
     <i></i>아마도 mutually 작용하는 chemicals의<br/>
     <i></i>영향일거야.</a>
-    <a href="#" data-track_id="3" class="lyrics_link">She knows I'm setting off<br/>
+    <a href="#" data-lyric_id="3" class="lyrics_link">She knows I'm setting off<br/>
     <i></i>For "Intergalactic Planetary,"</a> 햇빛도<br/>
     <i></i>닿지않는, 광년으론 잴 수 없는 곳<br/>
  <i></i>아마 NASA도 별 수 없을 걸?<br/>
