--- a/app/deploy/index.html
+++ b/app/deploy/index.html
@@ -24,7 +24,7 @@
 	
 	<link rel="stylesheet" href="css/changstarr.css">
 
-	<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
   <!--<script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>-->
 	<script src="js/changstarr.js"></script>
 	
