remove lyric div from lyric.html

--- a/app/deploy/data/lyrics/1/lyric.html
+++ b/app/deploy/data/lyrics/1/lyric.html
@@ -1,5 +1,5 @@
 
-<p class="lyrics"> <!-- 가사 영역 -->
+<!-- <p class="lyrics"> 가사 영역 -->
 <br/>
 <a href="#" data-lyric_id="0" class="lyrics_link">
    <i></i>Le Poison<br/>
@@ -207,4 +207,4 @@
 <i></i>The vices<br/>
 
 
-</p>
+<!--</p>-->
