--- a/app/deploy/data/lyrics/2/lyric.html
+++ b/app/deploy/data/lyrics/2/lyric.html
@@ -1,5 +1,5 @@
 
-<p class="lyrics"> <!-- 가사 영역 -->
+<!-- <p class="lyrics"> 가사 영역 -->
 <i></i>Hook&#41;<br/>
 <a href="#" data-lyric_id="0" class="lyrics_link">
     <i></i>I like it, Jazz!<br/>
@@ -129,4 +129,4 @@
  <i></i>오늘 밤도 작품 하나를 완성<br/>
      
  
-</p>
+ <!--</p>-->
