--- a/app/deploy/data/lyrics/2/lyric.html
+++ b/app/deploy/data/lyrics/2/lyric.html
@@ -25,22 +25,29 @@
 
 <i></i>Verse 1&#41;<br/>
 <i></i>난 하루중에 새벽에 제일 깨어있어<br/>
+<i></i>오늘도 어김없이 내 머리속<br/>
+<i></i>Navi로 찍고 비행해 미지의 행성<br/>
+
 <a href="#" data-lyric_id="2" class="lyrics_link">
+  <i></i>나와 같이 야행성인 내 고양이도<br/>
+  <i></i>이럴 땐 왠지 모르겠지만 날 내비둬<br/>
+</a>
+<a href="#" data-lyric_id="3" class="lyrics_link">
     <i></i>아마도 mutually 작용하는 chemicals의<br/>
     <i></i>영향일거야.</a>
-    <a href="#" data-lyric_id="3" class="lyrics_link">She knows I'm setting off<br/>
-    <i></i>For "Intergalactic Planetary,"</a> 햇빛도<br/>
+<a href="#" data-lyric_id="4" class="lyrics_link">She knows I'm setting off<br/>
+    <i></i>For "Intergalactic Planetary,"</a>햇빛도<br/>
     <i></i>닿지않는, 광년으론 잴 수 없는 곳<br/>
  <i></i>아마 NASA도 별 수 없을 걸?<br/>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="5" class="lyrics_link">
      <i></i>난 우주의 사나이, no '빨간 마후라' shit<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="6" class="lyrics_link">
      <i></i>So 이걸 듣고있다면 너도 buckle up!<br/>
      <i></i>현재 정체모를 천체에 접근하는 중…<br/>
      <i></i>난 착륙을 선택<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="7" class="lyrics_link">
      <i></i>SCV for Art Craft, 영감을 캐<br/>
      <i></i>가장 큰 수확을해, 두 눈을 감을 때<br/>
  </a>
@@ -49,13 +56,13 @@
 
 
  <i></i>Hook&#41;<br/>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="0" class="lyrics_link">
     <i></i>I like it, Jazz!<br/>
     <i></i>I like it, "Beat!"<br/>
     <i></i>I like it, Hip!<br/>
     <i></i>I like being awake<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="1" class="lyrics_link">
     <i></i>쉴틈없이 소통을 해대는 나의 neurons<br/>
     <i></i>I feel like I could keep this goin' for eons<br/>
  </a>
@@ -75,16 +82,16 @@
  <i></i>난 우주의 기운에 빚어진 원석을 채굴해<br/>
  <i></i>지구에선 볼 수 없는 보석을 제조했어<br/>
  <i></i>네 두 귀에 제공해 줄테니 느껴봐<br/>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="8" class="lyrics_link">
      <i></i>And throw 'em in the sky if you feel the vibe<br/>
  </a>
  <i></i>밤 하늘은 우릴 위한 Canvas<br/>
  <i></i>상상력은 우리들을 painters로<br/>
- <i></i>만들어주네 <a href="#" class="lyrics_link"> I feel like Rene Magritte<br/></a>
- <a href="#" class="lyrics_link">
+ <i></i>만들어주네 <a href="#" data-lyric_id="9" class="lyrics_link"> I feel like Rene Magritte<br/></a>
+ <a href="#" data-lyric_id="10" class="lyrics_link">
      <i></i>Or Van, when he made the 'Starry Night'<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="11" class="lyrics_link">
      <i></i>Or The Beatles, on the 'Strawberry Fields'<br/>
  </a>
  <a href="#" class="lyrics_link">
