--- a/app/deploy/data/lyrics/2/lyric.html
+++ b/app/deploy/data/lyrics/2/lyric.html
@@ -94,34 +94,34 @@
  <a href="#" data-lyric_id="11" class="lyrics_link">
      <i></i>Or The Beatles, on the 'Strawberry Fields'<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="12" class="lyrics_link">
      <i></i>Or A$AP Rocky, on 'Love, $ex, and Dreams'<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="13" class="lyrics_link">
      <i></i>날 따라 걸어와, 환상 세계로의 길<br/>
      <i></i>현실 속 현실은 너무 괴롭지<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="14" class="lyrics_link">
      <i></i>존재는 시간이 지배해 word to Heidegger<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="15" class="lyrics_link">
      <i></i>그럼 초월할게, 난 지금<br/>
      <i></i>쾌락 속의 깨달음을 쫓아<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="16" class="lyrics_link">
      <i></i>I'mma live high, till I reach the ‘Moksha!'<br/>
  </a>
 
  <span class="partition"></span><br/>
 
 <i></i>Hook&#41;<br/>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="0" class="lyrics_link">
     <i></i>I like it, Jazz!<br/>
     <i></i>I like it, "Beat!"<br/>
     <i></i>I like it, Hip!<br/>
     <i></i>I like being awake<br/>
  </a>
- <a href="#" class="lyrics_link">
+ <a href="#" data-lyric_id="1" class="lyrics_link">
     <i></i>쉴틈없이 소통을 해대는 나의 neurons<br/>
     <i></i>I feel like I could keep this goin' for eons<br/>
  </a>
