--- a/app/deploy/index.html
+++ b/app/deploy/index.html
@@ -73,6 +73,7 @@
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">4. </span>"Cool" Guys (skit)</a></li>
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">5. </span>Funky Swag (w/ Tammy)</a></li>
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">6. </span>Savage (Feat. Owen Ovadoz, nafla, Justhis)</a></li>
+                <!-- Lyrics not done yet
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">7. </span>27 Club (Feat. Neil)</a></li>
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">8. </span>**** Thoughts (Feat. Owen Ovadoz, Bill Stax)</a></li>
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">9. </span>Californicatin’ (Interlude)</a></li>
@@ -81,6 +82,7 @@
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">12. </span>High Plateau [“Hi, Plato!”]</a></li>
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">13. </span>Wolfpack Rendezvous</a></li>
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">14. </span>Butterfly Dream [“호접몽”]</a></li>
+                -->
             </ol>
         </div>
     </header>
@@ -90,19 +92,28 @@
        <div class="contents_top">
             <h2 class="song_title">I Like It Remix (Official)</h2> <!-- 현재 곡 제목 -->
             <div class="song_info"> <!-- 현재 곡 정보 -->
-                <p>
-                Produced by Arwwae<br/>
-                Album On the Road Mixtape<br/>
-                Vol.2: Highdigger<br/>
+                <div class="song_desc">
+                  <p>
+                  Produced by Arwwae<br/>
+                  Album On the Road Mixtape<br/>
+                  Vol.2: Highdigger<br/>
+                </div>
                 <strong class="song_author">Changstarr</strong>
                 </p>
             </div>
        </div>
        <div class="contents_btm">
             <!-- ↓ 180108 | 비디오 영역 추가 ↓ -->
+
+            <a class="song_video">
+            </a>
+
+             <!-- 
              <a class="song_video" href="//youtu.be/_Bx3mRiicdY" target="_blank">
                  <span class="ico_player"></span>
              </a>
+             
+             -->
             <!-- ↑ 180108 | 비디오 영역 추가 ↑ -->
             <p class="lyrics"> <!-- 가사 영역 -->
             <!-- end of .lyrics -->
