--- a/app/deploy/data/lyrics/1/lyric.html
+++ b/app/deploy/data/lyrics/1/lyric.html
@@ -107,7 +107,7 @@
 </a>
 <i></i>원한다면 꼭 이루고 말지 <a href="#" data-lyric_id="4" class="lyrics_link">So I don’t need your advices</a><br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="5" class="lyrics_link">
    <i></i>Les Fleurs du Mal (oui oui), Les Fleurs du Mal<br/>
    <i></i>Les Fleurs du Mal (oui oui), Les Fleurs du Mal<br/>
 </a>
@@ -115,7 +115,7 @@
 <span class="partition"></span><br/>
 
 <i></i>Verse 2)<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="9"  class="lyrics_link">
     <i></i>한국 사회라는 쳇바퀴<br/>
     <i></i>다들 제자리 걸음 중, 매일같이<br/>
     <i></i>But I’m way awake to be sleepwalkin' n shit<br/>
@@ -124,22 +124,22 @@
 
 <span class="partition"></span><br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="10" class="lyrics_link">
     <i></i>"It’s like a jungle sometimes<br/>
     <i></i>It makes me wonder how I keep from going under…”<br/>
 </a>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="11" class="lyrics_link">
     <i></i>내 '인식의 문'은 unlocked, 세번째 눈을 떴어<br/>
     <i></i>올라가있을게, 구름언덕<br/>
 </a>
 
 <span class="partition"></span><br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="12" class="lyrics_link">
     <i></i>Mmhmm, Poison, poison, I need my poisons<br/>
     <i></i>I’m sick and tired of hearing the society’s voices<br/>
     <i></i>그니까 부어줘, 더 부어줘, pour ‘em all<br/>
 </a>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="13" class="lyrics_link">
     <i></i>Fuck a detox!<br/>
     <i></i>꽉막힌 이 시스템이 ‘독'이라고 부르는 것들 내겐 오아시스<br/>
     <i></i>So let me get wasted, come here, let me taste it<br/>
@@ -149,7 +149,7 @@
 
 <span class="partition"></span><br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="14" class="lyrics_link">
     <i></i>Inspiration<br/>
     <i></i>콘트리트 정글 위 열릴 열매의 씨, I would never waste it<br/>
     <i></i>암것도 못해보고 죽을 이들의 피해의식따윈 상관 없어<br/>
@@ -159,17 +159,17 @@
 <span class="partition"></span><br/>
 
 <i></i>Hook)<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="2" class="lyrics_link">
    <i></i>I wonder what the meaning of life is<br/>
 </a>
 
 <i></i>내 머리 속은 온갖 욕망들로 꽉 차있지<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="3" class="lyrics_link">
     <i></i>I’m such a sucker for vices<br/>
 </a>
-<i></i>원한다면 꼭 이루고 말지 <a href="#" class="lyrics_link">So I don’t need your advices</a><br/>
+<i></i>원한다면 꼭 이루고 말지 <a href="#" data-lyric_id="4" class="lyrics_link">So I don’t need your advices</a><br/>
 
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="5" class="lyrics_link">
    <i></i>Les Fleurs du Mal (oui oui), Les Fleurs du Mal<br/>
    <i></i>Les Fleurs du Mal (oui oui), Les Fleurs du Mal<br/>
 </a>
@@ -177,7 +177,7 @@
 <span class="partition"></span><br/>
 
 <i></i>Bridge) *2<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="15" class="lyrics_link">
     <i></i>Mhm, 해보지도 않고 안된다는 너는<br/>
     <i></i>해볼 것 다 해본 나는 너를 보고 웃지<br/>
     <i></i>Mhm, 해보지도 않고 안된다는 너는<br/>
@@ -186,7 +186,7 @@
 
 <span class="partition"></span><br/>
 <i></i>Verse 3) Swings<br/>
-<a href="#" class="lyrics_link">
+<a href="#" data-lyric_id="16" class="lyrics_link">
     <i></i>My life is full of a bunch of vices<br/>
     <i></i>So many vices, that I don't know what right is<br/>
     <i></i>And my mother is a psychic<br/>
@@ -196,7 +196,7 @@
 <i></i>규칙을 깨는 건 이상하게 다 섹시<br/>
 <i></i>했지. 누구는 펩시<br/>
 <i></i>누구는 본드 불면서 몸을 서서히 해치지<br/>
-<i></i>내 몸이 원했던 건 전부 다 <a href="#" class="lyrics_link">f-e-d</a><br/>
+<i></i>내 몸이 원했던 건 전부 다 <a href="#" data-lyric_id="17" class="lyrics_link">f-e-d</a><br/>
 <i></i>Ironic 하지 주객전도 되서 death eats me<br/>
 <i></i>아직 걱정 안 할 나이<br/>
 <i></i>라고 말은 하지만 이건 뚱뚱한 lie<br/>
