fix youtube width issue

--- a/app/deploy/index.html
+++ b/app/deploy/index.html
@@ -66,8 +66,8 @@
                
             </div>
             <ol class="track_list">
-                <li class="track_item"><a href="#" class="track_link"><span class="track_num">1. </span>Les Fleurs du Mal [“악의 꽃”] (Feat. Swings)</a></li>
-                <li class="track_item on"><a href="#" class="track_link"><span class="track_num">2. </span>I Like It Remix</a></li>
+                <li class="track_item on"><a href="#" class="track_link"><span class="track_num">1. </span>Les Fleurs du Mal [“악의 꽃”] (Feat. Swings)</a></li>
+                <li class="track_item"><a href="#" class="track_link"><span class="track_num">2. </span>I Like It Remix</a></li>
                 <!-- 활성화 된 트랙에 on class -->
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">3. </span>Highdigger (Feat. Na$ty, Lord Saiyan)</a></li>
                 <li class="track_item"><a href="#" class="track_link"><span class="track_num">4. </span>"Cool" Guys (skit)</a></li>
@@ -105,6 +105,11 @@
        <div class="contents_btm">
             <!-- ↓ 180108 | 비디오 영역 추가 ↓ -->
 
+            <!--
+              TODO: fix youtube video size issue             
+              Youtube embedding is too small when desktop mode.
+            -->
+
             <a class="song_video">
             </a>
 
@@ -112,7 +117,6 @@
              <a class="song_video" href="//youtu.be/_Bx3mRiicdY" target="_blank">
                  <span class="ico_player"></span>
              </a>
-             
              -->
             <!-- ↑ 180108 | 비디오 영역 추가 ↑ -->
             <p class="lyrics"> <!-- 가사 영역 -->
