--- a/app/deploy/data/lyrics/13/lyric.html
+++ b/app/deploy/data/lyrics/13/lyric.html
@@ -1,109 +1,139 @@
 <!-- <p class="lyrics"> 가사 영역 -->
-
 <i></i>Intro)<br/>
 <a href="#" data-lyric_id="0" class="lyrics_link">
-  <i></i>Take a trip with me<br/>
-	<i></i>I’ll be your guide<br/>
-	<i></i>Come along with me<br/>
-</a>
-
-<span class="partition"></span><br/>
-
-<i></i>Hook)<br/>
-<a href="#" data-lyric_id="1" class="lyrics_link">
-	<i></i>Furthur Furthur, Merry Pranksters in the buildin'<br/>
-</a>
-<a href="#" data-lyric_id="2" class="lyrics_link">
-	<i></i>뻐꾹 뻐꾹, 난 둥지 위로 날아가 #KenKesey<br/>
+  <i></i>Reminiscin’ bout them good ol’ days, y’know?<br/>
+  <i></i>But life goes on...<br/>
 </a>
 
 <span class="partition"></span><br/>
 
 <i></i>Verse 1)<br/>
+<a href="#" data-lyric_id="1" class="lyrics_link">
+  <i></i>I wanna chill like I used to<br/>
+</a>
+<i></i>우린 너무 많이 변해버렸지 모두<br/>
+<i></i>이젠 누가봐도 어른<br/>
+<i></i>근데 서른이란 나인<br/>
+<i></i>여전히 
+<a href="#" data-lyric_id="2" class="lyrics_link">
+  feels like it’s too soon<br/>
+</a>
+<i></i>순수함을 잃는 것<br/>
+<i></i>밟고 싶지 않은 수순...<br/>
+<i></i>지그시 감은 눈은<br/>
+<i></i>추억이 담긴 우물이 되었네<br/>
+<i></i>그때를 회상하며 웃음을 지어 yeah<br/>
+
+<span class="partition"></span><br/>
+
 <a href="#" data-lyric_id="3" class="lyrics_link">
-	<i></i>Yo, I've been 'On the Road' like Kerouac<br/>
-	<i></i>온갖 깨달음 후에 날이 서 있어 내 눈엔<br/>
+  <i></i>Nostalgia—<br/>
+  <i></i>'아마 늦은 여름이었을거야'<br/>
+  <i></i>발가벗은 채로 강가에 풍덩<br/>
 </a>
-<i></i>그래서 이제 랩 할땐 군바리처럼 제대로 해<br/>
-<i></i>매일 밤 날 볼 수 있어 책상 앞 아님 Studio에<br/>
-
-<span class="partition"></span><br/>
-
-<i></i>이전에 없던 'hip' style을 공개해<br/>
 <a href="#" data-lyric_id="4" class="lyrics_link">
-	<i></i>한국에선 그저 책 속에서만<br/>
-	<i></i>찾아볼 수 있었던 Nu Seoul의 김삿갓<br/>
-	<i></i>이걸 기믹이라 생각한담 건 너의 착각<br/>
+	<i></i>물결은 출-렁 trippy ripple effect<br/>
+	<i></i>Got me high like a 풍선<br/>
 </a>
-
-<span class="partition"></span><br/>
-
 <a href="#" data-lyric_id="5" class="lyrics_link">
-	<i></i>Call it the 'Rebirth of Slick,' nah, rather 'Rebirth of Hip!'<br/>
-	<i></i>I'm so Digable like the Planet.
+	<i></i>Oh man, how I miss the spot!<br/>
+	<i></i>수업이 빨리 끝나길 항상 기다렸지 난<br/>
+	<i></i>종이 치면 send a message to the group, sayin'<br/>
 </a>
 <a href="#" data-lyric_id="6" class="lyrics_link">
-	귀 속에 울려퍼지는<br/>
-	<i></i>진동또는 Shiver, 달팽이관은 Filtre, 멀어져가는 지구<br/>
+	<i></i>“I’ll wait for y’all, at 늑대들의 rendezvous"<br/>
 </a>
+
+<span class="partition"></span><br/>
+
+<i></i>Hook 1)<br/>
 <a href="#" data-lyric_id="7" class="lyrics_link">
-	<i></i>Do y'all see the purple haze?<br/>
+	<i></i>Time goes by 야속하지만<br/>
+	<i></i>가슴에 새긴 추억은 늙지않아<br/>
+	<i></i>I’m still chillin’ at the wolfpack rendezvous<br/>
+	<i></i>Come meet me at the rendezvous<br/>
 </a>
-<i></i>다른 행성에 날라온 듯 한 기분!<br/>
 
 <span class="partition"></span><br/>
 
 <a href="#" data-lyric_id="8" class="lyrics_link">
-	<i></i>'인식의 문'을 열고 현실의 벽을 꿰뚫어봐 
-</a>
-<a href="#" data-lyric_id="9" class="lyrics_link">
-	#Seethrough<br/>
-	<i></i>이제 내가 보이니?<br/>
-	<i></i>"Hey wassup? this is where I've been, dude"<br/>
-	<i></i>여기는 Zion보다 높아, 더<br/>
-</a>
-<a href="#" data-lyric_id="10" class="lyrics_link">
-	<i></i>열린 마음으로 온다면 환영<br/>
-	<i></i>I'm down for some "Dark Fantasy"<br/>
-	<i></i>"Yo... can we get much higher?"<br/>
+	<i></i>한동안은 돌아가고싶다는<br/>
+	<i></i>생각도 했지만<br/>
+	<i></i>이제는 찾지않아<br/>
+	<i></i>내 안에 새긴 wolfpack rendezvous<br/>
+	<i></i>Come meet me at the rendezvous<br/>
 </a>
 
 <span class="partition"></span><br/>
 
-<i></i>Hook)<br/>
-<a href="#" data-lyric_id="1" class="lyrics_link">
-	<i></i>Furthur Furthur, Merry Pranksters in the buildin'<br/>
+<i></i>2<br/>
+<a href="#" data-lyric_id="9" class="lyrics_link">
+	<i></i>I remember back in the days when<br/>
+	<i></i>Ma homies and I used to kick it at the Bissell blaze bench<br/>
+	<i></i>A lil cypher talkin about how our days went<br/>
+	<i></i>Take two puffs, always pass to the left<br/>
 </a>
-<a href="#" data-lyric_id="2" class="lyrics_link">
-	<i></i>뻐꾹 뻐꾹, 난 둥지 위로 날아가 #KenKesey<br/>
+
+<span class="partition"></span><br/>
+
+<i></i>한 원 안의 우린 모두 대인배<br/>
+<i></i>어떤 배경이건 인종이건
+<a href="#" data-lyric_id="10" class="lyrics_link">
+	we the same man<br/>
 </a>
 <a href="#" data-lyric_id="11" class="lyrics_link">
-	<i></i>날 어루만져봐, so that you can feel me<br/>
-	<i></i>점점 넓어져가는 우리들만의 인식<br/>
-</a>
-<a href="#" data-lyric_id="1" class="lyrics_link">
-	<i></i>Furthur Furthur, Merry Pranksters in the buildin'<br/>
-</a>
-<a href="#" data-lyric_id="2" class="lyrics_link">
-	<i></i>뻐꾹 뻐꾹, 난 둥지 위로 날아가 #KenKesey<br/>
+	<i></i>"Get by with a little help from my friends" (yeah)<br/>
+	<i></i>And "I get high with a little help from my friends" (my friends)<br/>
 </a>
 
 <span class="partition"></span><br/>
 
-<i></i>Verse 2)<br/>
+<i></i>허나 서울이란 도신 너무나도 차가워<br/>
 <a href="#" data-lyric_id="12" class="lyrics_link">
-	<i></i>Chang and his chick friend Cassidy<br/>
-	<i></i>Took a trip like Jack and his friend Neal Cassady<br/>
+	<i></i>To elevate and meditate is all I want<br/>
 </a>
 <a href="#" data-lyric_id="13" class="lyrics_link">
-	<i></i>Her eyes were embracing the sky #ReneMagritte<br/>
-</a>
-<a href="#" data-lyric_id="14" class="lyrics_link">
-	<i></i>We vibed with the painting by Salvador Dali<br/>
+	<i></i>허나 역사 속 자유로운 영혼들은<br/>
+	<i></i>미디어와 프로파간다의 족쇄에 갇혀<br/>
 	<span class="partition"></span><br/>
-	<i></i>And…<br/>
-	<span class="partition"></span><br/>
-	<i></i>The rest is secret!<br/>
+	<i></i>하나 둘 씩 찢겨진채 사라졌네<br/>
+	<i></i>한평생을 오해 받으며 살아가네<br/>
 </a>
 
+<a href="#" data-lyric_id="14" class="lyrics_link">
+	<i></i>When will people realize to open up their real eyes<br/>
+	<i></i>To see the real lies hidden beneath the law?<br/>
+</a>
+
+<span class="partition"></span><br/>
+
+<i></i>Hook 2)<br/>
+<a href="#" data-lyric_id="15" class="lyrics_link">
+	<i></i>I wanna get high<br/>
+	<i></i>Climb up on 'Cloud 9'<br/>
+</a>
+<a href="#" data-lyric_id="16" class="lyrics_link">
+	<i></i>I need a little help where all my homies at?<br/>
+	<i></i>I'm chillin’ at the wolfpack rendezvous<br/>
+	<i></i>Come meet me at the rendezvous<br/>
+</a>
+
+<span class="partition"></span><br/>
+
+<a href="#" data-lyric_id="17" class="lyrics_link">
+	<i></i>I'm so high 하늘 높이 올라<br/>
+	<i></i>Everything will change 지구는 돌아<br/>
+	<i></i>But I’m still at the wolfpack rendezvous<br/>
+	<i></i>Come meet me at the rendezvous<br/>
+</a>
+
+<span class="partition"></span><br/>
+
+<i></i>Outro) *3<br/>
+<a href="#" data-lyric_id="18" class="lyrics_link">
+	<i></i>Come meet me at the rendezvous<br/>
+	<i></i>Come meet me at the rendezvous<br/>
+	<span class="partition"></span><br/>
+	<i></i>Come meet me at the rendezvous...<br/>
+</a>
  <!--</p>-->
