html update (hamburger menu)

--- a/app/deploy/index.html
+++ b/app/deploy/index.html
@@ -43,7 +43,6 @@
                 <div class="visual_image_glitch"></div>
                 <div class="visual_image_glitch"></div>
             </div>
-
            
             <h1 class="title">
                 <span class="title_text text_01" data-text="On the Road Mixtape">On the Road Mixtape</span>
@@ -55,6 +54,21 @@
                 <li class="sns_facebook"><a href="//facebook.com/theflyestAZN/" target="_blank">Facebook</a></li>
                 <li class="sns_instagram"><a href="//instagram.com/chang_starr/" target="_blank">Instagram</a></li>
                 <li class="sns_youtube"><a href="//youtube.com/channel/UCTBO7BoAb3rs4VBE7hy8hNw" target="_blank">Youtube</a></li>
+            </ul>
+
+
+            <button class="hamburger"> <!-- 180515 추가 -->
+                <div class="hamburger_icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </button>
+            <ul class="nav"> <!-- 180515 추가 -->
+                <li class="nav_item"><a>Music Video</a></li>
+                <li class="nav_item"><a>Goods</a></li>
+                <li class="nav_item"><a>Schedule</a></li>
+                <li class="nav_item"><a>Album</a></li>
             </ul>
         </div>
         <div class="track">
