css, images update

--- a/app/deploy/index.html
+++ b/app/deploy/index.html
@@ -55,22 +55,24 @@
                 <li class="sns_instagram"><a href="//instagram.com/chang_starr/" target="_blank">Instagram</a></li>
                 <li class="sns_youtube"><a href="//youtube.com/channel/UCTBO7BoAb3rs4VBE7hy8hNw" target="_blank">Youtube</a></li>
             </ul>
-
-
-            <button class="hamburger"> <!-- 180515 추가 -->
-                <div class="hamburger_icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </button>
-            <ul class="nav"> <!-- 180515 추가 -->
-                <li class="nav_item"><a>Music Video</a></li>
-                <li class="nav_item"><a>Goods</a></li>
-                <li class="nav_item"><a>Schedule</a></li>
-                <li class="nav_item"><a>Album</a></li>
-            </ul>
         </div>
+
+
+        <button class="hamburger"> <!-- 180515 추가 -->
+            <div class="hamburger_icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </button>
+        <nav class="nav-container">
+            <ul class="nav"> <!-- 180515 추가 -->
+                <li class="nav_item mv"><a>Music Video</a></li>
+                <li class="nav_item goods"><a>Goods</a></li>
+                <li class="nav_item schedule"><a>Schedule</a></li>
+                <li class="nav_item album"><a>Album</a></li>
+            </ul>
+        </nav>
         <div class="track">
             <div class="player">
               
